ai-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ai-server
spec:
  selector:
    matchLabels:
      app: ai-server
  template:
    metadata:
      labels:
        app: ai-server
    spec:
      containers:
      - name: ai-server
        image: us-central1-docker.pkg.dev/ikame-gem-ai-research/ikame/ai-server:v1.0.0
        resources:
          limits:
            memory: "256Mi"
            cpu: "500m"
        ports:
        - containerPort: 8184
---
apiVersion: v1
kind: Service
metadata:
  name: ai-server
spec:
  selector:
    app: ai-server
  ports:
  - port: 8184
    targetPort: 8184
