ideas_app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ideas-app-client
spec:
  selector:
    matchLabels:
      app: ideas-app-client
  template:
    metadata:
      labels:
        app: ideas-app-client
    spec:
      containers:
      - name: ideas-app-client
        image: quyennv0602/ideas-client:dev-3.0.2
        imagePullPolicy: Always
        resources:
          requests:
            memory: "512Mi"
            cpu: "500m"
          limits:
            memory: "512Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: ideas-app-client
spec:
  selector:
    app: ideas-app-client
  ports:
  - port: 80  
    targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ideas-app-server
spec:
  selector:
    matchLabels:
      app: ideas-app-server
  template:
    metadata:
      labels:
        app: ideas-app-server
    spec:
      containers:
      - name: ideas-app-server
        image: quyennv0602/ideas-server:dev-3.0.2
        imagePullPolicy: Always
        resources:
          requests:
            memory: "512Mi"
            cpu: "500m"
          limits:
            memory: "512Mi"
            cpu: "500m"
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: ideas-app-server
spec:
  selector:
    app: ideas-app-server
  ports:
  - port: 8080
    targetPort: 8080
