iresource_app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: iresource-app-client
spec:
  selector:
    matchLabels:
      app: iresource-app-client
  template:
    metadata:
      labels:
        app: iresource-app-client
    spec:
      containers:
      - name: iresource-app-client
        image: quyennv0602/iresource-client:dev-2.2.0
        imagePullPolicy: Always
        resources:
          requests:
            memory: "512Mi"
            cpu: "500m"
          limits:
            memory: "512Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: iresource-app-client
spec:
  selector:
    app: iresource-app-client
  ports:
  - port: 80  
    targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: iresource-app-server
spec:
  selector:
    matchLabels:
      app: iresource-app-server
  template:
    metadata:
      labels:
        app: iresource-app-server
    spec:
      containers:
      - name: iresource-app-server
        image: quyennv0602/iresource-server:dev-1.0.5
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
      - name: cloud-sql-proxy
        image: gcr.io/cloud-sql-connectors/cloud-sql-proxy:2.8.0
        args:
          - "--structured-logs"
          - "--port=5432"
          - "zegobi-datacenters:asia-southeast1:bi-team-web-admin"
          - "--credentials-file=/secrets/service_account.json"
        securityContext:
          runAsNonRoot: true
        volumeMounts:
        - name: secret-volume
          mountPath: /secrets/
          readOnly: true
        resources:
          limits:
            memory: "2048Mi"
            cpu: "2000m"
      volumes:
        - name: secret-volume
          secret:
            secretName: cloud-sql-credential
---
apiVersion: v1
kind: Service
metadata:
  name: iresource-app-server
spec:
  selector:
    app: iresource-app-server
  ports:
  - port: 8080
    targetPort: 8080
