iresource_prod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: iresource-prod-client
spec:
  selector:
    matchLabels:
      app: iresource-prod-client
  template:
    metadata:
      labels:
        app: iresource-prod-client
    spec:
      containers:
      - name: iresource-prod-client
        image: quyennv0602/iresource-client:prod-1.3.0
        imagePullPolicy: Always
        resources:
          requests:
            memory: "512Mi"
            cpu: "500m"
          limits:
            memory: "512Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: iresource-prod-client
spec:
  selector:
    app: iresource-prod-client
  ports:
  - port: 80  
    targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: iresource-prod-server
spec:
  selector:
    matchLabels:
      app: iresource-prod-server
  template:
    metadata:
      labels:
        app: iresource-prod-server
    spec:
      containers:
      - name: iresource-prod-server
        image: quyennv0602/iresource-server:prod-1.3.0
        imagePullPolicy: Always
        resources:
            limits:
              memory: "1024Mi"
              cpu: "2000m"
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: iresource-prod-server
spec:
  selector:
    app: iresource-prod-server
  ports:
  - port: 8080
    targetPort: 8080
