sd-designer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: designer-web
  namespace: default
  labels:
    app: designer-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: designer-web
  template:
    metadata:
      labels:
        app: designer-web
    spec:
      containers:
        - name: sd-for-designer-fe-sha256-1
          image: us-central1-docker.pkg.dev/ikame-gem-ai-research/sd-repo/sd-for-designer-fe:latest
          resources:
            limits:
              memory: "500Mi"
              cpu: "1024m"
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: designer-web
spec:
  selector:
    app: designer-web
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
