ingress-nginx_unauth.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-ai
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 100m
spec:
  ingressClassName: nginx
  rules:
    - host: ai.ikamegroup.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ai-server
                port:
                  number: 8184
          - path: /slack/events
            pathType: Prefix
            backend:
              service:
                name: bolt-server-service
                port:
                  number: 3000
    - host: iperform-dev.ikameglobal.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: iperform-client
                port:
                  number: 80
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: iperform-server
                port:
                  number: 8184
    - host: ideas-dev.ikameglobal.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ideas-app-client
                port:
                  number: 80
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: ideas-app-server
                port:
                  number: 8080
